ghc-4335c07/testsuite/tests/typecheck/should_fail/T6078.stderr

T6078.hs:8:10: error:
    You can't mix polymorphic and unlifted bindings:
      ip1p@(Ptr ip1) = Ptr ip0 `plusPtr` len
    Probable fix: add a type signature
